# Binance-Spot-Trading-Bot

./: .env.example  .gitignore  README.md  ecosystem.config.js  pyproject.toml
.agents/rules/: backtesting-rules.md  configuration-rules.md  data-and-exchange-handling-rules.md  documentation-rules.md  engineering-mindset.md  execution-rules.md  implementation-standards.md  logging-and-observability-rules.md  mission.md  non-negotiable-product-boundaries.md  output-rules-for-every-meaningful-task.md  persistence-rules.md  priority-order-when-time-or-scope-is-constrained.md  repository-behavior.md  risk-engine-rules.md  safety-rules.md  strategy-rules.md  (+3 more)
.tmp/: paper_sim_cp1252_after_fix.txt  paper_sim_nonpolluting.txt  research_cycle_closed_only_180d.txt  research_cycle_skip_backfill_180d.txt  research_cycle_with_backfill_180d.txt
app/: __init__.py  cli.py  main.py
binance_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: architecture.md  pm2-restart-guide.md  production_deployment.md  testing_and_running.md
tests/: conftest.py  test_approval_routing.py  test_backtest.py  test_cli_hardening.py  test_config.py  test_data_quality.py  test_hybrid_grid_dca.py  test_integration.py  test_kill_switch.py  test_lifecycle.py  test_logging.py  test_matrix_eval.py  test_metrics.py  test_optimizer.py  test_orchestrator.py  test_order_validator.py  test_paper_broker.py  test_parity_audit.py  test_phase9.py  test_regime_filter.py  test_repositories.py  test_risk.py  test_runtime_bridge.py  test_strategies.py  test_telegram.py  test_validation.py
(+85 files in other folders)
