[project]
name = "binance-trading-bot"
version = "0.1.0"
description = "Production-structured Binance Spot automated trading platform"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pandas>=2.2,<3",
    "numpy>=2.1,<3",
    "sqlalchemy>=2.0,<3",
    "httpx>=0.28,<1",
    "websockets>=14.0,<15",
    "python-dotenv>=1.0,<2",
    "structlog>=24.4,<26",
    "rich>=13.9,<15",
    "typer>=0.15,<1",
    "ta>=0.11,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-jose[cryptography]>=3.3,<4",
]

[project.scripts]
trading-bot = "app.cli:app"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
